abstract interface class Biology{
  void healing(){}
}