abstract interface class Mechanic{
  void repair(){}
}