abstract interface class Building{
  void constructBuilding(){}
  void destroyBuilding(){}
}