abstract interface class Unit {
  void unitBirth() {}

  void unitDeath() {}

  // void unitList(Unit unit, List<List<Unit>> allUnitLists){
  //   List<Unit> unitLists =[];
  //   if(unitLists.length<13){
  //     unitLists.add(unit);
  //     for(Unit unit in unitLists){
  //       print('부대 현황');
  //       print(unit.toString());
  //     }
  //   }else{
  //     print('정원초과');
  //   }
  // }

}
