import '../buildings_by_race/terran_building.dart';

class CommandCenter extends TerranBuilding {
  CommandCenter({
    required super.name,
    required super.hp,
  });
}
