import '../buildings_by_race/zerg_building.dart';

class Hive extends ZergBuilding {
  Hive({
    required super.name,
    required super.hp,
  });
}
