import '../buildings_by_race/protoss_building.dart';

class Nexus extends ProtossBuilding {
  Nexus({
    required super.name,
    required super.hp,
    required super.shield,
  });
}
