import '../star_object.dart';

class Terran extends StarObject {
  Terran({
    required super.name,
    required super.hp,
  });
}
