import '../building_unit/unit.dart';
import '../race/terran.dart';

class TerranUnit extends Terran implements Unit {
  TerranUnit({
    required super.name,
    required super.hp,
  });

  @override
  void unitBirth() {
    // TODO: implement unitBirth
  }

  @override
  void unitDeath() {
    // TODO: implement unitDeath
  }


}
