import '../building_unit/unit.dart';
import '../race/zerg.dart';

class ZergUnit extends Zerg implements Unit {
  ZergUnit({
    required super.name,
    required super.hp,
  });

  @override
  void unitBirth() {
    // TODO: implement unitBirth
  }

  @override
  void unitDeath() {
    // TODO: implement unitDeath
  }
}
